#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_hdf2psana
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-07-00
2013-11-05 Andy Salnikov
- preparation for new DDL parser: tags renamed:
  - no-proxy to embedded (in h5 schema)
  - need psddl V00-12-00 for this change
  
Tag: V00-06-00
2013-10-31 Andy Salnikov
- replace chunk size argument for make_datasets with chunk slzie policy 
  objects
- chunk policy also determines chunk cache size, method in HdfParameters
  is not used any more, class is removed 
- class DefaultChunkPolicy provides default implementation of the 
  chunk policy which repeats what we have in old translator.

Tag: V00-05-03
2013-10-24 Andy Salnikov
- more mistakes in ControlData.ConfigV2 generated by old translator,
  need a new schema version
- generated code now adds _schemaVersion attribute to a group

Tag: V00-05-02
2013-10-11 Andy Salnikov
- actual schema for ControlData.ConfigV2 and ConfigV3 classes produced 
  by "old" translator was missing one attribute (npvLabels)
- create special v0 schema for these two classes which lacks that
  attribute and v1 schema that has it. 
- v0 also needs manual implementation of the npvLabels() method in a new
  file control.cpp

Tag: V00-05-01
2013-10-08 Andy Salnikov
- bld.cpp: fix for arg list in store_BldDataAcqADCV1_v0()

Tag: V00-05-00
2013-10-08 Andy Salnikov
- regenerated with psddl V00-09-01
- store_at() method now accepts pointer instead of ref, stores blank if 
  pointer is zero

Tag: V00-04-00
2013-10-08 Andy Salnikov
- regenerated with psddl V00-09-00
- replaced append() method with store_at()
- disable proxy generation for few internal classes

Tag: V00-03-03
2013-10-07 Andy Salnikov