@@ -6,6 +6,7 @@
     <use file="psddldata/bld.ddl.xml" />
 
     <use file="psddl_hdf2psana/lusi-h5.ddl.xml" cpp_headers="psddl_hdf2psana/lusi.ddl.h"/>
+    <use file="psddl_hdf2psana/ipimb-h5.ddl.xml" cpp_headers="psddl_hdf2psana/ipimb.ddl.h"/>
     
     <package name="Bld">
 
