@@ -1,0 +1,61 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE psddl SYSTEM "psddl.dtd">
+
+<psddl>
+
+    <use file="psddldata/ipimb.ddl.xml" />
+
+    <package name="Ipimb">
+
+        <!-- ========================================================================= -->
+    
+        <h5schema name="ConfigV1" version="0">
+
+            <dataset name="config">
+                <attribute name="triggerCounter"/>
+                <attribute name="serialID"/>
+                <attribute name="chargeAmpRange"/>
+                <attribute name="capacitorValue" method="capacitorValues" shape="4"/>
+                <attribute name="calibrationRange"/>
+                <attribute name="resetLength"/>
+                <attribute name="resetDelay"/>
+                <attribute name="chargeAmpRefVoltage"/>
+                <attribute name="calibrationVoltage"/>
+                <attribute name="diodeBias"/>
+                <attribute name="status"/>
+                <attribute name="errors"/>
+                <attribute name="calStrobeLength"/>
+                <attribute name="trigDelay"/>
+            </dataset>
+            
+        </h5schema>
+    
+        <!-- ========================================================================= -->
+    
+        <h5schema name="ConfigV2" version="0">
+
+            <dataset name="config">
+                <attribute name="triggerCounter"/>
+                <attribute name="serialID"/>
+                <attribute name="chargeAmpRange"/>
+                <attribute name="capacitorValue" method="capacitorValues" shape="4"/>
+                <attribute name="calibrationRange"/>
+                <attribute name="resetLength"/>
+                <attribute name="resetDelay"/>
+                <attribute name="chargeAmpRefVoltage"/>
+                <attribute name="calibrationVoltage"/>
+                <attribute name="diodeBias"/>
+                <attribute name="status"/>
+                <attribute name="errors"/>
+                <attribute name="calStrobeLength"/>
+                <attribute name="trigDelay"/>
+                <attribute name="trigPsDelay"/>
+                <attribute name="adcDelay"/>
+            </dataset>
+            
+        </h5schema>
+    
+        <!-- ========================================================================= -->
+    
+    </package>
+</psddl>
