@@ -1,0 +1,30 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE psddl SYSTEM "psddl.dtd">
+
+<psddl>
+
+    <use file="psddldata/rayonix.ddl.xml" />
+
+    <package name="Rayonix">
+
+        <!-- ========================================================================= -->
+    
+        <h5schema name="ConfigV1" version="0">
+        
+            <dataset name="config">
+                <attribute name="binning_f"/>
+                <attribute name="binning_s"/>
+                <attribute name="exposure"/>
+                <attribute name="trigger"/>
+                <attribute name="rawMode"/>
+                <attribute name="darkFlag"/>
+                <attribute name="readoutMode"/>
+                <attribute name="deviceID" rank="1"/>
+            </dataset>
+            
+        </h5schema>
+    
+        <!-- ========================================================================= -->
+    
+    </package>
+</psddl>
